--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,9 @@
   </head>
   <body>
     {% include 'navbar.html' %}
+    <center>
+      <img src="/media/logo.jpg" width="50%" height="50%">
+    </center>
   	<div class="container">
     	<div class="row">	
     		<div class="col-8 mx-auto">
