--- a/templates/home.html
+++ b/templates/home.html
@@ -3,5 +3,5 @@
 {% block content %}
 
 <h1>{{ title }}</h1>
-
+<a href="asistencia/justificacion/crear">Ingresar nueva justificación</a>
 {% endblock %}
