--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -2,4 +2,12 @@
 
 {% block content %}
 <h1>Contacto</h1>
-{% endblock %}
+<div class="card">
+  	<div class="card-body">
+		<p><b>Escuela de Ingeniería en Información y Control de Gestión</b></p>
+		<p><b>Directora de carrera: </b>Valeska Mena Allendes</p>
+		<p><b>E-mail: </b><a href="mailto:name@email.com">valeska.mena@uach.cl</a></p>
+		<p><b>Fono: </b><a href="tel:+56652524721">+56 (65) 2524721</a></p>
+	</div>
+</div>
+{% endblock %}	
