--- a/asistencia/templates/asignatura/list.html
+++ b/asistencia/templates/asignatura/list.html
@@ -6,9 +6,10 @@
 <table class="table table-striped table-hover">
 	<thead class="thead-dark">
 		<tr>
-			<th>Codigo</th>
+			<th>Código</th>
 			<th>Nombre</th>
 			<th>Semestre</th>
+			<th></th>
 		</tr>
 	</thead>
 	{% for instance in object_list %}
@@ -16,8 +17,9 @@
 		<td>{{ instance.codigo }}</td>
 		<td>{{ instance.nombre }}</td>
 		<td>{{ instance.semestre }}</td>
+		<td><a href="{{ instance.get_absolute_url }}">Ver detalles</a></td>
 	</tr>
 	{% endfor %}
 </table>
-<a href="crear">Nueva asignatura</a>
+<input type="button" class="btn btn-primary px-4 mx-4" onclick="location.href='crear';" value='Agregar nueva asignatura'/>
 {% endblock %}
