--- a/asistencia/templates/justificacion/aprobar.html
+++ b/asistencia/templates/justificacion/aprobar.html
@@ -18,7 +18,7 @@
 	<input type="hidden" name="justificativo" value="{{ obj.justificativo }}">
 	<input type="hidden" name="estado" value="1">
 
-	<input type="submit" class="btn btn-success btn-lg px-4 mx-4" value='Sí'/>
+	<input type="submit" class="btn btn-success btn-lg px-4 mx-4" value='Confirmar'/>
 	<input type="button" class="btn btn-secondary btn-lg px-4 mx-4" onclick="location.href='./';" value="Cancelar" />
 </form>
 {% endblock %}
