--- a/asistencia/templates/justificacion/create.html
+++ b/asistencia/templates/justificacion/create.html
@@ -70,31 +70,23 @@ La escuela evaluará la pertinencia, validez y aprobación de su justificativo d
 		  	<div class="card bg-light">
 		  		<div class="card-body">
 				  	<label><b>Fecha justificativo inasistencia</b></label>
+				  	<br/>
+				  	<br/>
 				  	<div class="form-row">
 				    	<div class="col">
 				  			<div class="form-group">
-				    			<label><b>Día de inicio</b></label>
-				    			<input type="number" class="form-control" name="diaInicio" min="1" max="31">
+				    			<label><b>Fecha de inicio</b></label>
+				    			<br/>
+				    			<input type="date" name="diaInicio">
 				  			</div>
 				  		</div>
-				  		<div class="col">
-						  	<div class="form-group">
-						    	<label><b>Mes de inicio</b></label>
-						    	<input type="number" class="form-control" name="mesInicio" min="1" max="12">
-						  	</div>
-						</div>
 						<div class="col">
 							<div class="form-group">
-				    			<label><b>Día de término</b></label>
-				    			<input type="number" class="form-control" name="diaFin" min="1" max="31">
+				    			<label><b>Fecha de término</b></label>
+				    			<br/>
+				    			<input type="date" name="diaFin">
 				  			</div>
 						</div>
-						<div class="col">
-							<div class="form-group">
-								<label><b>Mes de término</b></label>
-				    			<input type="number" class="form-control" name="mesFin" min="1" max="12">
-				    		</div>
-				    	</div>
 					</div>
 				</div>
 			</div>
