--- a/asistencia/templates/justificacion/detail.html
+++ b/asistencia/templates/justificacion/detail.html
@@ -34,11 +34,11 @@
 					<table class="mb-2">
 						<tr>
 							<td><b>Fecha de inicio:</b></td>
-							<td>{{ justificacion.diaInicio }} del {{ justificacion.mesInicio }}</td>
+							<td>{{ justificacion.diaInicio }}</td>
 						</tr>
 						<tr>
 							<td class="pr-4"><b>Fecha de término:</b></td>
-							<td>{{ justificacion.diaFin }}  del {{ justificacion.mesFin }}</td>
+							<td>{{ justificacion.diaFin }}</td>
 						</tr>
 						<tr>
 							<td><b>Motivo:</b></td>
