--- a/asistencia/templates/asignatura/create.html
+++ b/asistencia/templates/asignatura/create.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 <form method='POST'> {% csrf_token %}
+	<h1>{{ title }}</h1>
 	{{ form.as_p }}
 	<input type='submit' class="btn btn-lg btn-success" value='Guardar'/>
 	<input type="button" class="btn btn-lg btn-secondary" onclick="location.href='../';" value="Cancelar" />
